# Skija

./: .gitignore  CHANGELOG.md  NOTICE  README.md  TODO.md  a.out
.github/workflows/: build.yml
docs/: Conventions.md  Getting Started.md
examples/clojure/: README.md  deps.edn
examples/clojure-snake/: README.md  deps.edn
examples/jwm/: README.md
examples/vulkan/: README.md
platform/: CMakeLists.txt
platform/cc/: BackendRenderTarget.cc  BackendTexture.cc  Bitmap.cc  Blender.cc  BreakIterator.cc  Canvas.cc  Codec.cc  Color.cc  ColorChannelFlag.cc  ColorFilter.cc  ColorSpace.cc  ColorType.cc  Data.cc  DirectContext.cc  Document.cc  Drawable.cc  EncoderJPEG.cc  EncoderPNG.cc  EncoderWEBP.cc  Font.cc  FontMgr.cc  FontMgr.hh  FontStyleSet.cc  Graphics.cc  Image.cc  ImageFilter.cc  ManagedString.cc  MaskFilter.cc  OutputWStream.cc  Paint.cc  PaintFilterCanvas.cc  Path.cc  PathBuilder.cc  PathEffect.cc  PathMeasure.cc  PathSegmentIterator.cc  Picture.cc  PictureRecorder.cc  PixelRef.cc  Pixmap.cc  (+15 more)
platform/cc/impl/: BufferUtil.cc  Library.cc  Managed.cc  RefCnt.cc
platform/cc/paragraph/: FontCollection.cc  Paragraph.cc  ParagraphBuilder.cc  ParagraphCache.cc  ParagraphStyle.cc  StrutStyle.cc  TextStyle.cc  TypefaceFontProvider.cc  interop.cc
platform/cc/resources/: CachingResourceProvider.cc  DataURIResourceProviderProxy.cc  FileResourceProvider.cc
platform/cc/shaper/: FontMgrRunIterator.cc  FontRunIterator.cc  FontRunIterator.hh  HbIcuScriptRunIterator.cc  IcuBidiRunIterator.cc  ManagedRunIterator.cc  RunIterators.hh  Shaper.cc  TextBlobBuilderRunHandler.cc  TextLineRunHandler.cc  TextLineRunHandler.hh  interop.cc  interop.hh
platform/cc/skottie/: Animation.cc  AnimationBuilder.cc  Logger.cc  interop.cc
platform/cc/sksg/: InvalidationController.cc
platform/cc/svg/: SVGCanvas.cc  SVGDOM.cc  SVGNode.cc  SVGSVG.cc  interop.cc  interop.hh
platform/cc/test/: EnumTest.cc
platform/cmake/: FindSkia.cmake  FindSkiaAndroid.cmake
platform/java/: module-info.java
platform/java-linux/: LibraryFinder.java  module-info.java
platform/java-macos-arm64/: LibraryFinder.java  module-info.java
platform/java-macos-x64/: LibraryFinder.java  module-info.java
platform/java-windows/: LibraryFinder.java  module-info.java
script/: build.py  build_utils.py  check.py  clean.py  common.py  cross_compile.py  deploy.py  deploy_platform.py  deploy_shared.py  idea.py  install_docker.sh  javadoc.py  package_platform.py  package_shared.py  release.py  test.py
shared/java/: AlphaType.java  AnimationDisposalMode.java  AnimationFrameInfo.java  BackendRenderTarget.java  BackendState.java  BackendTexture.java  Bitmap.java  BlendMode.java  Blender.java  BreakIterator.java  Canvas.java  ClipMode.java  Codec.java  Color.java  Color4f.java  ColorAlphaType.java  ColorChannel.java  ColorChannelFlag.java  (+132 more)
(+227 files in other folders)
